--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
   },
   "dependencies": {
     "@langchain/community": "^0.3.19",
+    "@langchain/google-genai": "^0.2.3",
+    "@langchain/langgraph": "^0.2.63",
     "@langchain/mongodb": "^0.1.0",
+    "@langchain/openai": "^0.5.5",
     "@nestjs/common": "^10.4.12",
     "@nestjs/core": "^10.4.12",
     "@nestjs/platform-express": "^10.4.15",
     "@pinecone-database/pinecone": "^4.0.0",
     "@types/multer": "^1.4.12",
     "dotenv": "^16.4.5",
-    "langchain": "^0.3.7",
+    "langchain": "^0.3.21",
+    "langsmith": "^0.3.15",
     "mongodb": "^6.12.0",
     "openai": "^4.76.3",
     "reflect-metadata": "^0.2.0",
