--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "@langchain/langgraph": "^0.2.63",
     "@langchain/mongodb": "^0.1.0",
     "@langchain/openai": "^0.5.5",
-    "@nestjs/common": "^10.4.12",
-    "@nestjs/core": "^10.4.12",
-    "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/common": "^11.1.6",
+    "@nestjs/core": "^11.1.6",
+    "@nestjs/platform-express": "^11.1.6",
+    "@nestjs/swagger": "^11.2.0",
     "@pinecone-database/pinecone": "^4.0.0",
     "@types/multer": "^1.4.12",
     "dotenv": "^16.4.5",
@@ -36,12 +37,13 @@
     "mongodb": "^6.12.0",
     "openai": "^4.76.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.2",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/cli": "^11.0.10",
+    "@nestjs/schematics": "^11.0.7",
+    "@nestjs/testing": "^11.1.6",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
